<resources>
    <string name="app_name">Fit-Friends</string>
    <string name="splashScreenTextView">توسعه یافته توسط تیم برنامه نویسی سین</string>
    <string name="input_username">نام کاربری</string>
    <string name="input_password">رمز ورود</string>
    <string name="login_btn"> ورود</string>
    <string name="remember_me">مرا به خاطر بسپار</string>
    <string name="login_text">برای ورود به برنامه نام کاربری و رمز عبور خود را وارد کنید.</string>
    <string name="tmp_dashboard_text">به صفحه اصلی خوش آمدید</string>
    <string name="logout_message">آیا مایل به خروج از برنامه هستید؟</string>
    <string name="dismiss">خیر</string>
    <string name="accept">بلی</string>
</resources>