<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
<<<<<<< Updated upstream
    android:textDirection="rtl"
    tools:context=".ui.activities.LoginActivity">
=======
    tools:context=".ui.activities.login.LoginActivity">
>>>>>>> Stashed changes

    <ImageView
        android:id="@+id/rectangle_bg"
        android:layout_width="364dp"
        android:layout_height="474dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="160dp"
        android:src="@drawable/rectangle_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginTop="24dp"
        android:contentDescription="logo"
        android:scaleType="fitXY"
        android:src="@drawable/ic_flattr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangle_bg">

    </ImageView>


    <TextView
        android:id="@+id/login_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nazli"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/rectangle_bg"
        app:layout_constraintStart_toStartOf="@id/rectangle_bg"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

    </TextView>


    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/nazli"
        android:text="@string/input_username"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/usernameEditText"
        app:layout_constraintEnd_toEndOf="@id/rectangle_bg"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="@id/rectangle_bg"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/et_bg"
        android:hint="@string/input_username"
        android:textAlignment="textStart"
        android:inputType="textAutoComplete"
        android:fontFamily="@font/nazli"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        android:maxLength="20"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="@id/rectangle_bg"
        app:layout_constraintStart_toStartOf="@id/rectangle_bg"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        android:autofillHints="" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/nazli"
        android:text="@string/input_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@id/rectangle_bg"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@id/rectangle_bg"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintVertical_bias="0.0" />



    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/et_bg"
        android:drawableStart="@drawable/ic_eye"
        android:fontFamily="@font/nazli"
        android:hint="@string/input_password"
        android:textAlignment="textEnd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        android:maxLength="20"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="@id/rectangle_bg"
        app:layout_constraintStart_toStartOf="@id/rectangle_bg"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
        />

    <CheckBox
        android:id="@+id/checkedTextView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="68dp"
        android:checked="false"
<<<<<<< Updated upstream
        android:text="Remember me"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
=======
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
>>>>>>> Stashed changes
        app:layout_constraintEnd_toEndOf="@+id/rectangle_bg"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/nazli"
        android:text="@string/remember_me"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toStartOf="@+id/checkedTextView"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.631" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/nazli"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_bg"
        app:layout_constraintEnd_toEndOf="@id/rectangle_bg"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="@id/rectangle_bg"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>